[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/Menu.gd" type="Script" id=1]
[ext_resource path="res://image/font.tres" type="DynamicFontData" id=2]
[ext_resource path="res://scene/animationsc.tres" type="SpriteFrames" id=3]
[ext_resource path="res://code/selection.gd" type="Script" id=4]
[ext_resource path="res://image/bouton/boutonf.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 280.639
margin_top = 288.932
margin_right = 309.639
margin_bottom = 326.932
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonm" type="Button" parent="."]
margin_left = 266.61
margin_top = 292.0
margin_right = 286.61
margin_bottom = 312.0
rect_scale = Vector2( 0.5, 0.5 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonp" type="Button" parent="."]
margin_left = 298.54
margin_top = 292.0
margin_right = 318.54
margin_bottom = 312.0
rect_scale = Vector2( 0.5, 0.5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lancer" type="Button" parent="."]
margin_left = 264.054
margin_top = 305.343
margin_right = 364.054
margin_bottom = 329.343
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "LANCER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 310.549, 148.848 )

[node name="Addplayer1" type="TextureButton" parent="."]
anchor_right = 0.41
margin_left = 68.905
margin_top = 185.0
margin_right = 118.905
margin_bottom = 225.0
rect_scale = Vector2( 3, 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus1" type="Sprite" parent="Addplayer1"]
position = Vector2( 24.8947, 33.9103 )
texture = ExtResource( 5 )
hframes = 3
frame = 2
region_rect = Rect2( 0, 0, 7, 7 )

[node name="Addplayer2" type="TextureButton" parent="."]
margin_left = 355.83
margin_top = 185.0
margin_right = 405.83
margin_bottom = 225.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus2" type="Sprite" parent="Addplayer2"]
visible = false
position = Vector2( 25.1851, 33.91 )
texture = ExtResource( 5 )
hframes = 3
frame = 2
region_rect = Rect2( 0, 0, 7, 7 )

[node name="selec1" type="AnimatedSprite" parent="."]
position = Vector2( 144, 80 )
scale = Vector2( 3, 3 )
z_index = 1
frames = ExtResource( 3 )
animation = "idle_down1"
script = ExtResource( 4 )

[node name="selec2" type="AnimatedSprite" parent="."]
position = Vector2( 432, 80 )
scale = Vector2( 3, 3 )
z_index = 2
frames = ExtResource( 3 )
animation = "idle_down1"
script = ExtResource( 4 )

[node name="selec3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 144, 240 )
scale = Vector2( 3, 3 )
z_index = 3
frames = ExtResource( 3 )
animation = "idle_down1"
script = ExtResource( 4 )

[node name="selec4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 432, 240 )
scale = Vector2( 3, 3 )
z_index = 4
frames = ExtResource( 3 )
animation = "idle_down1"
script = ExtResource( 4 )
[connection signal="pressed" from="Buttonm" to="." method="_on_Buttonm_pressed"]
[connection signal="pressed" from="Buttonp" to="." method="_on_Buttonp_pressed"]
[connection signal="pressed" from="Lancer" to="." method="_on_Lancer_pressed"]
[connection signal="pressed" from="Addplayer1" to="." method="_on_Addplayer1_pressed"]
[connection signal="pressed" from="Addplayer2" to="." method="_on_Addplayer2_pressed"]
[connection signal="frame_changed" from="selec1" to="selec1" method="_on_selec1_frame_changed"]
[connection signal="frame_changed" from="selec2" to="selec2" method="_on_selec2_frame_changed"]
[connection signal="frame_changed" from="selec3" to="selec3" method="_on_selec3_frame_changed"]
[connection signal="frame_changed" from="selec4" to="selec4" method="_on_selec4_frame_changed"]
